Bug 1268233 - Don't unregister for audio session notifications if we haven't registered yet. r=aklotz

MozReview-Commit-ID: JvUhjyoYzf6